--- a/web-cms/firebase.json
+++ b/web-cms/firebase.json
@@ -5,5 +5,8 @@
       "source": ".",
       "frameworksBackend": {}
     }
-  ]
+  ],
+  "extensions": {
+    "firestore-send-email": "firebase/firestore-send-email@0.1.27"
+  }
 }
