--- a/web-cms/package.json
+++ b/web-cms/package.json
@@ -24,6 +24,7 @@
     "@sendgrid/mail": "^7.7.0",
     "angular-svg-icon": "^16.0.0",
     "mkdirp": "^3.0.1",
+    "ngx-cookie-service": "^16.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
