--- a/web-cms/package.json
+++ b/web-cms/package.json
@@ -22,7 +22,11 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@sendgrid/mail": "^7.7.0",
+    "@syncfusion/ej2": "^23.1.36",
+    "@syncfusion/ej2-angular-navigations": "^23.1.36",
+    "@syncfusion/ej2-angular-richtexteditor": "^23.1.36",
     "angular-svg-icon": "^16.0.0",
+    "codemirror": "^6.0.1",
     "mkdirp": "^3.0.1",
     "ngx-cookie-service": "^16.0.1",
     "rxjs": "~7.8.0",
