--- a/web-cms/package.json
+++ b/web-cms/package.json
@@ -12,7 +12,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.1.0",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
@@ -29,6 +28,7 @@
     "codemirror": "^6.0.1",
     "mkdirp": "^3.0.1",
     "ngx-cookie-service": "^16.0.1",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
