create mobile app and pwa on firebase

--- a/web-cms/.firebaserc
+++ b/web-cms/.firebaserc
@@ -6,7 +6,7 @@
     "ccms-app-builder": {
       "hosting": {
         "web": [
-          "web-cms-ccms"
+          "ccms-app-builder"
         ]
       }
     }
