--- a/web-cms/firebase.json
+++ b/web-cms/firebase.json
@@ -3,7 +3,14 @@
     {
       "target": "web",
       "source": ".",
-      "frameworksBackend": {}
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "frameworksBackend": {
+        "region": "us-central1"
+      }
     }
   ],
   "extensions": {
